Fix up dark mode link colours

--- a/public/res/index.css
+++ b/public/res/index.css
@@ -183,13 +183,13 @@ a span:focus {
     color: #444;
   }
 
-  a {
+  a span {
     color: #cce3ff;
     box-shadow: inset 0 -0.5em 0 #0c304d;
   }
 
-  a:hover,
-  a:focus {
+  a span:hover,
+  a span:focus {
     box-shadow: inset 0 -0.15em 0 #0c304d;
   }
 }
